--- a/text_similarity_with_embeddings.ipynb
+++ b/text_similarity_with_embeddings.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNky0WtnkK624meMURmU+Mz",
+      "authorship_tag": "ABX9TyM4pR+1eLZ/x25NSEs5P68n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "source": [
         "#set openAI env\n",
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = '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'"
+        "os.environ[\"OPENAI_API_KEY\"] = ''"
       ],
       "metadata": {
         "id": "Nhwnz0AuwJEV"
