--- a/Unit_test_writing_using_a_multi_step_prompt.ipynb
+++ b/Unit_test_writing_using_a_multi_step_prompt.ipynb
@@ -90,7 +90,7 @@
         "import ast  # used for detecting whether generated Python code is valid\n",
         "import openai  # used for calling the OpenAI API\n",
         "\n",
-        "openai.api_key = \"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\"\n",
+        "openai.api_key =\n",
         "\n",
         "color_prefix_by_role = {\n",
         "    \"system\": \"\\033[0m\",  # gray\n",
