--- a/word_similiraties_with_hugging_faces_draft.ipynb
+++ b/word_similiraties_with_hugging_faces_draft.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJOLMlK/W9PyL1BfWt0rpH",
+      "authorship_tag": "ABX9TyNHriEmCGI6AKUSbsIxUtr6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4900,6 +4900,17 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "YDHLE7QYTZNW"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "sentences = [\"I'm happy\", \"I'm full of happiness\"]"
       ],
       "metadata": {
@@ -5374,9 +5385,91 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "embedding_test = model.encode('fox', convert_to_tensor=False)"
+      ],
       "metadata": {
         "id": "NJnnn8lAB-na"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res_ = np.dot(embeddings,np.asarray((embedding_test)))"
+      ],
+      "metadata": {
+        "id": "TEyeBxb6TEcJ"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "93rWU4Qtb7nv",
+        "outputId": "4bf88380-eb64-4755-be48-f9fa3868963e"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.15928812, 0.09679879, 0.43647555, 0.11200401, 0.20333079],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#get the most similar emdedding\n",
+        "\n",
+        "max_index = np.argmax(res_)\n",
+        "sentences[max_index]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "oGrJYrK1TItH",
+        "outputId": "81ab365b-f607-4997-dac5-beb6b8fd2470"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'The quick brown fox jumps over the lazy happy dog.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_AM740mHTqOT"
       },
       "execution_count": null,
       "outputs": []
